# agentvault

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-workspace.yaml
app/: package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: activity-feed.tsx  chat-interface.tsx  portfolio-dashboard.tsx  providers.tsx
app/src/contexts/: VaultContext.tsx
app/src/hooks/: index.ts  useWebSocket.ts
app/src/lib/: api.ts
docs/: ARCHITECTURE.md  POLICIES.md  QUICKSTART.md  demo.html  index.html
programs/agentvault/: Cargo.toml
programs/agentvault/src/: errors.rs  lib.rs
programs/agentvault/src/instructions/: emergency_halt.rs  execute_lend.rs  execute_stake.rs  execute_swap.rs  initialize_vault.rs  mod.rs  record_performance.rs  register_strategy.rs  resume_vault.rs  subscribe_strategy.rs  update_policy.rs  withdraw.rs
programs/agentvault/src/state/: mod.rs  performance.rs  policy.rs  strategy.rs  vault.rs
runtime/: package.json
runtime/src/: config.ts  index.ts
runtime/src/adapters/: index.ts  jupiter.ts  marginfi.ts  marinade.ts
runtime/src/agent/: runtime.ts
runtime/src/db/: index.ts  migrate.ts  postgres.ts  redis.ts
runtime/src/llm/: claude.ts
runtime/src/policy/: engine.ts
runtime/src/server/: http.ts  index.ts  websocket.ts
runtime/src/tools/: definitions.ts
runtime/src/types/: .gitkeep  index.ts
runtime/src/utils/: logger.ts
scripts/: deploy-devnet.sh  generate-types.sh  setup-test-vault.ts
